# ShitRenderer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  compileshaders.py
assets/images/: envBRDF.hdr  grace-new2.hdr  sheenEnvBRDF.hdr
assets/shaders/glsl/Abuffer/: read.frag  read2.frag  write.frag
assets/shaders/glsl/IBL/: display.frag  skybox.frag
assets/shaders/glsl/SSLarge/: display.frag  display.vert
assets/shaders/glsl/ao/: ao.comp  read.frag  shading.comp  write.frag  write.vert
assets/shaders/glsl/arealight/: color.frag  display.frag  display.vert
assets/shaders/glsl/bloom/: display.frag  display.vert  process.comp
assets/shaders/glsl/cartoon/: display.frag
assets/shaders/glsl/common/: cubemapmipmap.comp  envBRDF.comp  equirectangular2cube.comp  irradianceSH.comp  irradianceSHLlm.comp  prefilteredEnv2D - Copy.comp  prefilteredEnv2D.comp  sheenEnvBRDF.comp
assets/shaders/glsl/deferred/: read.frag  readmultisample.frag  write.frag
assets/shaders/glsl/depthpeeling/: read.frag  read.vert  write.frag  write.vert
assets/shaders/glsl/fxaa/: postProcess.frag  read.frag  read.vert
assets/shaders/glsl/imageprocess/: display.frag  display.vert  process.comp
assets/shaders/glsl/imgui/: display.frag
assets/shaders/glsl/inputattachment/: read.frag  readmultisample.frag  write.frag
assets/shaders/glsl/irradianceSH/: display.frag
assets/shaders/glsl/kbuffers/: read.frag  write.frag
assets/shaders/glsl/loadmodelobj/: display.frag
assets/shaders/glsl/multiview/: multiview.frag  multiview.vert  (+2 more)
examples/: 00-init.cpp  01-triangle.cpp  02-triangle-vbo.cpp  03-image.cpp  04-ubo.cpp  05-depth.cpp  06-mipmap.cpp  07-multisample.cpp  08-model.cpp  08-screenshot.cpp  09-model-pbr.cpp  09-model.cpp  09-skeleton.cpp  10-tessllation.cpp  11-compute-filter.cpp  12-compute-edgedetection.cpp  13-cubemap.cpp  14-envBRDF.cpp  14-irradiance.cpp  15-irradianceSH.cpp  16-prefilteredEnv.cpp  16-reflectionEnv.cpp  17-envBRDF.cpp  18-ibl.cpp  Abuffer.cpp  CMakeLists.txt  IBL.cpp  SSLarge.cpp  ao.cpp  appbase.cpp  appbase.hpp  appbasetest.cpp  arealight.cpp  bloom.cpp  common.cpp  common.h  common.hpp  compileshaders.py  deferred.cpp  deferredmultisample.cpp  (+27 more)
examples/assets/: glTF-Sample-Models
examples/assets/images/: envBRDF.hdr
examples/assets/shaders/: 01.frag  01.vert  02-1.frag  03.frag  03.vert  05.frag  05.vert  06.frag  06.vert  08.frag  08.vert  09.frag  09.vert  axis.frag  axis.vert
examples/assets/shaders/glsl/: 01.frag  03.vert  04.vert  06.frag  06.vert  09.frag  09.vert  09a.frag  09a.vert  10.frag  10.tesc  10.tese  10.vert  100-geometry.frag  100-geometry.vert  11.comp  12-filter.comp  12-grayscale.comp  12.comp  13.frag  13.vert  14.frag  16.frag  16.vert  17.frag  18.frag  18.vert  cubemap.frag  cubemap.vert  envBRDF.comp  equirectangular2cube.comp  irradiance.comp  irradianceSH.comp  irradianceSH_Llm.comp  opticalDepth.comp  prefilterEnvMap.comp  reflectionEnv.comp  skyboxProcedural2D.comp  standard.frag  standard.vert
examples/common/: ImFileDialog.cpp  ImFileDialog.h  appbase.cpp  appbase.h  appbase.hpp  boundingVolume.cpp  boundingVolume.h  camera.cpp  camera.h  common.cpp  common.h  common.hpp  component.cpp  component.h  entry.h  environment.cpp  environment.h  exampleconfig.hpp.in  gameobject.cpp  gameobject.h  gpuResource.cpp  gpuResource.h  gui.cpp  gui.hpp  idObject.h  image.cpp  image.h  imgui-impl.cpp  imgui-impl.hpp  input.cpp  input.hpp  light.cpp  light.h  material.cpp  material.h  material.hpp  mesh.cpp  mesh.h  model.cpp  model.h  (+22 more)
examples/dependencies/lib/: freetype.lib  glfw3.lib
examples/imguiimpl/: imgui-impl.cpp  imgui-impl.hpp
renderer/: ShitBuffer.h  ShitBuffer.hpp  ShitBufferView.h  ShitBufferView.hpp  ShitCommandBuffer.h  ShitCommandBuffer.hpp  ShitCommandPool.h  ShitCommandPool.hpp  ShitContext.h  ShitDescriptor.h  ShitDescriptor.hpp  ShitDevice.h  ShitDevice.hpp  ShitEnum.h  ShitEnum.hpp  ShitEvent.h  ShitEvent.hpp  ShitFence.h  ShitFence.hpp  ShitFramebuffer.h  ShitFramebuffer.hpp  ShitImage.h  ShitImage.hpp  ShitListener.h  ShitListener.hpp  ShitMemory.hpp  ShitModule.h  ShitModule.hpp  ShitNonCopyable.hpp  ShitObserver.h  ShitPipeline.h  ShitPipeline.hpp  ShitPredefines.hpp  ShitQueue.h  ShitQueue.hpp  ShitRenderPass.h  ShitRenderPass.hpp  ShitRenderSystem.h  ShitRenderSystem.hpp  ShitRendererPrerequisites.h  (+20 more)
renderer/GL/: GLBuffer.cpp  GLBuffer.h  GLBuffer.hpp  GLBufferView.cpp  GLBufferView.h  GLBufferView.hpp  GLCommandBuffer.cpp  GLCommandBuffer.h  GLCommandBuffer.hpp  GLCommandPool.cpp  GLCommandPool.h  GLCommandPool.hpp  GLContext.cpp  GLContext.h  GLDescriptor.cpp  GLDescriptor.h  GLDescriptor.hpp  GLDevice.cpp  GLDevice.h  GLDevice.hpp  GLFence.h  GLFence.hpp  GLFramebuffer.cpp  GLFramebuffer.h  GLFramebuffer.hpp  GLImage.cpp  GLImage.h  GLImage.hpp  GLMemory.cpp  GLMemory.hpp  GLPipeline.cpp  GLPipeline.h  GLPipeline.hpp  GLPrerequisites.cpp  GLPrerequisites.h  GLPrerequisites.hpp  GLQueue.cpp  GLQueue.h  GLQueue.hpp  GLRenderPass.h  (+19 more)
renderer/GL/lib/: glew32.lib
renderer/Platform/Linux/: ShitX11Window.h
renderer/Platform/Windows/: ShitPrerequisitesWin32.hpp  ShitWin32Window.cpp  ShitWin32Window.h
renderer/Vulkan/: VKBuffer.cpp  VKBuffer.h  VKBuffer.hpp  VKBufferView.cpp  VKBufferView.h  VKBufferView.hpp  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandBuffer.hpp  VKCommandPool.h  VKCommandPool.hpp  VKContext.cpp  VKContext.h  VKDescriptor.cpp  VKDescriptor.h  VKDescriptor.hpp  VKDevice.cpp  VKDevice.h  VKDevice.hpp  VKDeviceObject.hpp  VKFence.h  VKFence.hpp  VKFramebuffer.cpp  VKFramebuffer.h  VKFramebuffer.hpp  VKImage.cpp  VKImage.h  VKImage.hpp  VKMemory.cpp  VKMemory.hpp  VKPipeline.cpp  VKPipeline.h  VKPipeline.hpp  VKPrerequisites.cpp  VKPrerequisites.h  VKPrerequisites.hpp  VKQueue.cpp  VKQueue.h  VKQueue.hpp  VKRenderPass.cpp  (+18 more)
renderer/sources/: ShitDevice.cpp  ShitEnum.cpp  ShitEvent.cpp  ShitModule.cpp  ShitPipeline.cpp  ShitRenderPass.cpp  ShitRenderSystem.cpp  ShitUtility.cpp  ShitWin32.cpp  ShitWindow.cpp  ShitWindowWin32.cpp
screenshot/: 20220916224824-0.hdr  20220917172536-0.hdr
(+36 files in other folders)
